[package]
name = "rest-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
simd-json = { version = "0.5.0", features = ["allow-non-simd"] }
querystring = "1.1.0"

[build]
rustflags = ["-C", "target-cpu=native"]